--- a/KeywordMapper/App.config
+++ b/KeywordMapper/App.config
@@ -1,12 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="MaximumEntropyModelDirectory" value="D:\KeywordMapper\KeywordMapper\Resources\Models\"/>
+    <add key="MaximumEntropyModelDirectory" value="D:\KeywordMapper\KeywordMapper\Resources\Models\" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=EXCELRAWS800\SQL2016;Initial Catalog=KeywordMapper;Persist Security Info=True;User ID=sa;Password=sa@123" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=EXCELRAWS800\SQL2016;Initial Catalog=KeywordMapper;Persist Security Info=True;User ID=sa;Password=sa@123" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Irony" publicKeyToken="ca48ace7223ead47" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
