--- a/KeywordMapper/packages.config
+++ b/KeywordMapper/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Irony.Interpreter" version="0.9.0" targetFramework="net461" />
+  <package id="Irony" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
-  <package id="OpenNLP" version="1.3.4" targetFramework="net461" />
+  <package id="OpenNLP" version="1.3.5" targetFramework="net461" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net461" />
 </packages>
